# pno-physics-bench

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FINAL_COMPLETION_REPORT.md  FINAL_QUALITY_GATES_REPORT.md  FINAL_VALIDATION_REPORT.txt  GENERATION_1_COMPLETION_REPORT.md  GENERATION_2_COMPLETION_REPORT.md  GENERATION_2_FINAL_IMPLEMENTATION_SUMMARY.md  GENERATION_2_ROBUSTNESS_DEMO_REPORT_20250823_205956.md  GENERATION_2_ROBUSTNESS_SUMMARY_20250823_205736.md  GENERATION_3_IMPLEMENTATION_REPORT.md  GITHUB_WORKFLOWS_SETUP.md  GLOBAL_FIRST_IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_FINAL_REPORT.md  PROJECT_CHARTER.md  QUALITY_REPORT.json  README.md  RESEARCH_METHODOLOGY_REPORT.md  RESEARCH_PAPER_DRAFT.md  SECURITY.md  autonomous_documentation_generator.py  (+96 more)
.devcontainer/: devcontainer.json  post-start.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  production-deployment.yml
.terragon/: README.md  autonomous-discovery.py  config.yaml  value-discovery-scheduler.py  value-metrics.json
config/: production.json
demo_logs/: session_production_training_1754792119.json
deployment/: Dockerfile  autonomous_production_deployment_suite.py  deploy.sh  deployment-config.json  kubernetes.yaml  pno-deployment.yaml  pno-hpa.yaml  pno-service.yaml  prometheus-config.yaml  redis-deployment.yaml
deployment/configs/: ap-northeast-1.json  ap-southeast-1.json  autoscaling.json  cicd.json  compliance.json  disaster_recovery.json  eu-west-1.json  global.json  kubernetes.yaml  monitoring.json  production.json  security.json  us-east-1.json  us-west-2.json
deployment/disaster-recovery/: backup-cronjob.yaml  multi-region-config.yaml  runbook.md
deployment/docs/: api_reference.md  deployment_guide.md
deployment/kubernetes/: global-deployment.yaml  global-ingress.yaml  multi-cloud-storage.yaml
deployment/production/: deploy.sh  deployment-summary.json  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  service.yaml
deployment/scripts/: build.sh  deploy.sh  monitor.sh
deployment/security/: compliance-checklist.md  network-policy.yaml  pod-security-policy.yaml  security-scan-config.yaml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  Makefile  ROADMAP.md  conf.py  index.rst
docs/adr/: 0000-template.md  0001-probabilistic-neural-operators.md  0002-pytorch-primary-framework.md  0003-variational-inference-approach.md  README.md
docs/workflows/: AUTONOMOUS_INTEGRATION.md  README.md
examples/: advanced_research_demo.py  basic_usage.py
monitoring/: docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana-dashboards/: dashboard.yml
monitoring/grafana-datasources/: prometheus.yml
monitoring/production/: alert_rules.yml  enhanced_monitoring.yml  grafana_dashboard.json  prometheus.yml
production_outputs/mcu_net_production_20250823_203313/: README.md  deployment_manifest.json  mcu_net_architecture.json  production_report.md
scripts/: release.py
src/pno_physics_bench/: __init__.py  advanced_models.py  autonomous_research_agent.py  benchmarks.py  cli.py  comprehensive_logging.py  config.py  data_parallel.py  datasets.py  distributed_training.py  exceptions.py  logging_config.py  metrics.py  models.py  monitoring.py  monitoring_advanced.py  monitoring_server.py  optimization.py  optimization_engine.py  performance_optimization.py  production_robust_models.py  quantum_enhanced_pno.py  research_extensions.py  security_validation.py  uncertainty.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_advanced_models.py  test_basic_functionality_standalone.py  test_comprehensive_core_functionality.py  test_integration.py  test_performance_comprehensive.py  test_research_modules.py  test_robustness_security.py  test_scaling_performance.py  test_security_comprehensive.py
tests/benchmark/: test_performance.py
tests/integration/: test_training_pipeline.py
tests/research/: test_basic_functionality.py  test_hierarchical_uncertainty.py  test_multi_fidelity.py  test_performance_optimizers.py  (+1 more)
validation_outputs/: test_report.md  test_results.json  validation_report.json  validation_report.md
(+103 files in other folders)
